test/fail/TerminationHyvernatLoop.agda
{-# OPTIONS --hyvernat-termination-check #-}

module TerminationHyvernatLoop where

  bad : Set
  bad = bad
